fix: overlap desktop navbar

--- a/src/components/Header/Navbar/Navbar.module.scss
+++ b/src/components/Header/Navbar/Navbar.module.scss
@@ -98,7 +98,7 @@
 .Mobile__hamburger {
   display: none;
 }
-@media (max-width: 54em) {
+@media (max-width: 58em) {
   .desktopNavbar {
     display: none;
   }
